# vibeplot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html
.github/workflows/: deploy.yml  main.yml
models/: cube.txt  pyramid.txt
pkg/: README.md  package.json  vibeplot.d.ts  vibeplot.js  vibeplot_bg.wasm  vibeplot_bg.wasm.d.ts
python/: pyproject.toml
python/examples/: color_cycling_cube.py  volume_gyroid.py  voxels_demos.py
python/vibeplot/: __init__.py  marching_cubes.py
python/vibeplot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: input.rs  lib.rs  math.rs  model.rs  picking.rs  renderer.rs  shader.wgsl  state.rs  vertex.rs
