[package]
name = "webgpu-triangle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "24"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
]}
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
bytemuck = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
